# Emperor_vs_Aliens

./: .gitignore  Emperor_VS_Aliens.fake.self  Emperor_VS_Aliens.gnpdrm.pkg  Makefile  Makefile.ps3  README.md
Development/: Emperor_vs_Aliens
Development/Emperor_vs_Aliens/include/: Makefile  Makefile.am  Makefile.am~  Makefile.in  canvas.h  circle.h  config.h  config.h.in  draw.h  draw.hpp  draw.h~  element.h  element.h~  emperorvsaliens.h  enviromentelement.h  field.h  game.h  image.h  level_01.h  line.h  map.h  marker.h  messagehandler.h  messageidgenerator.h  object.h  point.h  rectangle.h  sdlcanvas.h  sdlimage.h  sdlvideo.h  sdlwindow.h  unit.h  video.h  video.hpp  videosettings.h  window.h  windowsettings.h
Development/Emperor_vs_Aliens/include/generic/: 3dfunctions.h  BLAH3dfunctions.h  dirlist.h  frustum.h  generic.h  genericmath.h  initvideo.h  input.h  lodepng.h  meshbump.h  msviewer.h  normals.h  saveobj.h
Development/Emperor_vs_Aliens/include/generic/dashboard/: dashbutton.h  dashloop.h  dashmenu.h  dashsetup.h  dashtime.h
Development/Emperor_vs_Aliens/include/generic/msViewer2/: mathlib.h  msModel.h
Development/Emperor_vs_Aliens/include/generic/sdldraw/: drawcircle.h  loadanddrawsurfaces.h  rotoscale.h
Development/Emperor_vs_Aliens/src/: EmperorVsAliens  EmperorVsAliens.cpp  Makefile  Makefile.am  Makefile.am~  Makefile.in  draw.cpp  draw.cpp~  draw.lo  emperorvsaliens.cpp  game.cpp  level_01.cpp  libedge.la  marker.cpp  object.cpp  sdlcanvas.cpp  sdlvideosettings.cpp  sdlwindow.cpp  video.cpp  video.cpp~  video.lo  videosettings.cpp  window.cpp  windowsettings.cpp
Development/Emperor_vs_Aliens/src/.deps/: EmperorVsAliens.Po  boundingrectangle.Plo  circle.Plo  color.Plo  draw.Plo  element.Plo  game.Plo  line.Plo  point.Plo  rectangle.Plo  sdlcanvas.Plo  sdlimage.Plo  sdlvideo.Plo  sdlvideosettings.Plo  sdlwindow.Plo  sdlwindowfactory.Plo  sdlwindowsettings.Plo  tictactoe.Po  video.Plo  videosettings.Plo  windowsettings.Plo
Development/Emperor_vs_Aliens/src/.libs/: libedge.la  libedge.lai
Development/Emperor_vs_Aliens/test/: Makefile  Makefile.am  Makefile.in  validate  validate.cpp
Development/Emperor_vs_Aliens/test/.deps/: validate.Po
Doc/: GameDesignDocument_V5_0_0_ImpactEntertainment.docx
include/: assaulter.h  canvas.h  easygame.h  emperorvsaliens.h  enviromentelement.h  field.h  gamefactory.h  hardgame.h  hud.h  image.h  level_01.h  level_02.h  level_03.h  level_04.h  level_05.h  level_06.h  level_07.h  level_09.h  level_10.h  level_11.h  level_12.h  levelfactory.h  menu.h  normalgame.h  rectangle.h  sdlimage.h  soundeffect.h  text.h  unit.h  unitfactory.h  windowfactory.h
source/: archer.cpp  assaulter.cpp  boundingrectangle.cpp  (+45 more)
(+216 files in other folders)
