# Author: Edson Alves - edsonalves@unb.br
# Co-author: Luis Gustavo Souza Silva - luisgustavodd@hotmail.com
# Date: 21/12/2012

# Includes dir
libedgeincludedir = $(includedir)/tictactoe

# Include files
libedgeinclude_HEADERS =	draw.h \
							video.h \
							videosettings.h \
							windowsettings.h \
							exception.h \
							window.h \
							sdlvideo.h \
							sdlwindow.h \
							canvas.h \
							color.h \
							point.h \
							rectangle.h \
							sdlcanvas.h \
							sdlvideosettings.h \
							windowfactory.h \
							line.h \
							circle.h \
							image.h \
							sdlimage.h \
							sdlwindowsettings.h \
							boundingarea.h \
							boundingrectangle.h \
							element.h \
							game.h
