# Author: Edson Alves - edsonalves@unb.br
# Date: 31/12/2012

# Programs excluded from instalation
noinst_PROGRAMS = validate

# Program description
validate_SOURCES =	validate.cpp

# Libraries needed to build program
validate_LDADD = -lSDL -L../src/ -ledge

# Include flags
INCLUDES = -I./include -Wall -Wno-long-long -W -pedantic -ansi -I/usr/local

